# pong3d

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile.mingw  Makefile.mingw64  Makefile.msys2  README.md  configure  configure.ac  display.c  display.h  geometry.c  geometry.h  main.c  math_constants.h  msys.c  msys.h  pong3d.c  pong3d.h  renderer.c  renderer.h  resource.aps  resource.rc  screens.c  screens.h  sound.c  sound.h  synth.c  synth.h  tasks.c  tasks.h  text.c  text.h  utils.c  utils.h
projects/vs2017/Pong3D/: Pong3D.cpp  Pong3D.rc  Pong3D.sln  Pong3D.vcxproj  Pong3D.vcxproj.filters  RCa25692  resource.aps  resource.h  resource.rc
projects/vs2017/Pong3D/Release/: Pong3D.iobj  Pong3D.ipdb
projects/vs2017/Pong3D/Release/Pong3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Pong3D.lastbuildstate  Pong3D.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
